Clean up code, fix modal, remove menu items
Remove menu items for prottypes and other.
Remove unused code from earlier way of showing list of games.
Fix modal, game-description, if too long wont show on same line.

--- a/src/components/Games.css
+++ b/src/components/Games.css
@@ -169,6 +169,10 @@ html {
     /* width: 75%; */
   }
 
+  .modal-game-description {
+    max-width: 400px;
+  }
+
   .modal-game-footer {
     width: 100%;
     margin-top: auto;
